ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.3, 3.1.2
    • Affects Version/s: 3.0.2, 3.1.1
    • Component/s: Security
    • None
    • Fully Compatible
    • ALL
    • Security 2 04/24/15
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When running with SCRAM-SHA1 authentication and --sslFIPSMode, openssl asserts with this error message:
      OpenSSL internal error, assertion failed: Low level API call to digest SHA1 forbidden in FIPS mode!
      2015-04-13T23:23:27.498Z F - Got signal: 6 (Abort).

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Ernie Hershey (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: