SERVER-18051 Fix OpenSSL FIPS error when using SCRAM-SHA1